[package]
name = "lorikeet"
version = "0.15.0"
authors = ["cetra3 <cetra3@hotmail.com>"]
license = "MIT/Apache-2.0"
description = "a parallel test runner for devops"
repository = "https://github.com/cetra3/lorikeet"
readme = "README.md"
edition = "2018"

[dependencies]
petgraph = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
tera = "1.20.0"
structopt = "0.3.26"
log = "0.4.22"
colored = "2.1.0"
atty = "0.2.14"
regex = "1.11.1"
env_logger = "0.11.5"
reqwest = {version = "0.11", features = ["json", "stream", "multipart"] }
native-tls = "0.2.12"
chrono = { version = "0.4.39", features = ["serde"] }
lazy_static = "1.5.0"
chashmap = "2.2.2"
hostname = "0.4.0"
sys-info = "0.9.1"
# openssl-probe = "0.1.5"
# jmespath = "0.3.0"
jmespath = { git = "https://github.com/ParashiftDev/jmespath.rs", branch = "master" }
anyhow = "1.0.94"
serde_json = "1.0"
quick-xml = "0.37.1"
cookie = "0.18.1"
tokio = {version = "1.0", features = ["full"]}
tokio-util = {version = "0.7.13", features= ["codec"]}
libc = "0.2.86"
futures = "0.3.15"
